--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -6,7 +6,7 @@
     <uses-permission android:name="android.permission.GET_ACCOUNTS" />
     <uses-permission android:name="android.permission.READ_PROFILE" />
     <uses-permission android:name="android.permission.READ_CONTACTS" />
-    <uses-permission android:name="android.permission.INTERNET"/>
+    <uses-permission android:name="android.permission.INTERNET" />
 
     <application
         android:allowBackup="true"
@@ -25,8 +25,12 @@
         <activity
             android:name=".SearchActivity"
             android:label="@string/title_activity_login" />
-        <activity android:name=".SignupActivity"></activity>
-        <activity android:name=".AdminLogin"></activity>
+        <activity android:name=".SignupActivity" />
+        <activity android:name=".AdminLogin" />
+        <activity
+            android:name=".MyShoppingList"
+            android:label="MyShoppingList"
+            android:theme="@style/AppTheme.NoActionBar"></activity>
     </application>
 
 </manifest>
