--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -25,8 +25,7 @@
         </activity>
         <activity
             android:name=".SearchActivity"
-            android:label="@string/title_activity_search">
-        </activity>
+            android:label="@string/title_activity_search" />
         <activity android:name=".SignupActivity" />
         <activity android:name=".AdminLogin" />
         <activity android:name=".AdminPage" />
@@ -34,8 +33,9 @@
             android:name=".ui.MyShoppingList"
             android:label="MyShoppingList"
             android:theme="@style/AppTheme.NoActionBar" />
-        <activity android:name=".AboutActivity">
-        </activity>
+        <activity android:name=".AboutActivity" />
+        <activity android:name=".MyProfile" />
+        <activity android:name=".ui.MyFavoriteRecipe"></activity>
     </application>
 
 </manifest>
