--- a/app/build.gradle
+++ b/app/build.gradle
@@ -36,6 +36,7 @@ dependencies {
     compile 'com.squareup.okio:okio:1.3.0'
     compile 'com.jakewharton:butterknife:8.8.1'
     compile 'com.squareup.picasso:picasso:2.71828'
+    compile 'com.google.code.gson:gson:2.8.0'
     annotationProcessor 'com.jakewharton:butterknife-compiler:8.8.1'
 
 }
